--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -488,6 +488,7 @@
                         <option>Certificate in IT</option>
                         <option>Certificate in English</option>
                     </select>
+                    <div class="valid-feedback">Value Accepted</div>
                 </td>
                 <td class="fw-bold w-25">Source</td>
                 <td>
@@ -504,51 +505,70 @@
                         <option value="Walk-In">Walk-In</option>
                         <option value="WhatsApp">WhatsApp</option>
                     </select>
+                    <div class="valid-feedback">Value Accepted</div>
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
                 <td class="w-25">
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','editedInquiry','firstName')" disabled value="Kasun">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid first name</div>
                 </td>
                 <td class="fw-bold w-25">Last Name</td>
                 <td>
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','editedInquiry','lastName')" disabled value="Malhara">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid last name</div>
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
                 <td class="w-25">
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetPrimaryMobile" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','primaryMobileNumber')" disabled value="0781011144">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid mobile number</div>
                 </td>
                 <td class="fw-bold w-25">Email</td>
                 <td>
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','editedInquiry','email')" placeholder="Optional" disabled value="eamalindu@gmail.com">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid email</div>
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
                 <td class="w-25">
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetSecondaryMobile" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','editedInquiry','secondaryMobileNumber')" placeholder="Optional" disabled value="0781011144">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid mobile number</div>
                 </td>
                 <td class="fw-bold w-25">
                     <select class="form-select rounded-0 small form-select-sm fw-bold inquirySheetInputs" disabled id="inquirySheetIdType" onchange="selectStaticValueValidator(this,'','editedInquiry','idType')" required>
                         <option value="NIC">NIC</option>
                         <option value="POSTAL">POSTAL</option>
                     </select>
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid ID Type</div>
                 </td>
                 <td>
                     <input class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetIdValue" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedInquiry','idValue')" disabled value="983151108V">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid ID/Postal value</div>
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
                 <td class="w-25">
                     <input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetNextFollowUp" onkeyup="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','editedInquiry','contactTime')" disabled value="2023-10-26 at 00:00">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid contact Time</div>
                 </td>
                 <td class="fw-bold w-25">Description</td>
                 <td>
                     <textarea class="small rounded-0 form-control-sm inquirySheetInputs" id="inquirySheetDescription" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','editedInquiry','description')" disabled></textarea>
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid description</div>
                 </td>
             </tr>
             </tbody>
