--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -201,25 +201,25 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeFullName">Full Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeFullName" required>
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeFullName" required>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeCallingName">Calling Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeCallingName" required>
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeCallingName" required>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeNIC">NIC Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeNIC" required>
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeNIC" required>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeDOB">Date of birth</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeDOB" required type="text">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeDOB" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -227,12 +227,12 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" id="employeeGenderMale" name="employeeGender" type="radio"
+                            <input class="form-check-input newEmployeeInputs" id="employeeGenderMale" name="employeeGender" type="radio"
                                    value="Male">
                             <label class="form-check-label" for="employeeGenderMale">Male</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" id="employeeGenderFemale" name="employeeGender" type="radio"
+                            <input class="form-check-input newEmployeeInputs" id="employeeGenderFemale" name="employeeGender" type="radio"
                                    value="Female">
                             <label class="form-check-label" for="employeeGenderFemale">Female</label>
                         </div>
@@ -241,31 +241,31 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeEmail">Email Address</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeEmail" required type="email">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeEmail" required type="email">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeMobile">Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeMobile" required type="text">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeMobile" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold small" for="employeeLand">Land Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeLand" required type="text" placeholder="Optional">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeLand" required type="text" placeholder="Optional">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeAddress">Address</label>
                         </div>
-                        <input class="form-control rounded-0" id="employeeAddress" required type="text">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeAddress" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeCivilStatus">Civil Status</label>
                         </div>
-                        <select class="form-select rounded-0" id="employeeCivilStatus" required>
+                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeCivilStatus" required>
                             <option>Static Value 1</option>
                             <option>Static Value 2</option>
                             <option>Static Value 3</option>
@@ -276,7 +276,7 @@
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeDesignation">Designation</label>
                         </div>
-                        <select class="form-select rounded-0" id="employeeDesignation" required>
+                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeDesignation" required>
                             <option>Dynamic Value 1</option>
                             <option>Dynamic Value 2</option>
                             <option>Dynamic Value 3</option>
@@ -287,7 +287,7 @@
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeStatus">Employee Status</label>
                         </div>
-                        <select class="form-select rounded-0" id="employeeStatus" required>
+                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeStatus" required>
                             <option>Dynamic Value 1</option>
                             <option>Dynamic Value 2</option>
                             <option>Dynamic Value 3</option>
@@ -298,7 +298,7 @@
                         <div class="form-label">
                             <label class="fw-bold small" for="employeeNote">Note</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="employeeNote" placeholder="Optional" rows="4"></textarea>
+                        <textarea class="rounded-0 form-control newEmployeeInputs" cols="80" id="employeeNote" placeholder="Optional" rows="4"></textarea>
                         <div class="text-muted small"><small> a short description which will be useful for the
                             counsellor who will be handling this inquiry</small></div>
                     </div>
